Improvments - HashMaps and DI